--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,22 @@
+sudo: required
+dist: trusty
+group: deprecated-2017Q3
+
+os: linux
 language: C
+
+cache:
+  apt: true
+  ccache: true
+
+env:
+  global:
+    - MAKEJOBS=-j5
+    - BOOST_TEST_RANDOM=1$TRAVIS_BUILD_ID
+    - CCACHE_SIZE=400M
+    - CCACHE_TEMPDIR=/tmp/.ccache-temp
+    - CCACHE_COMPRESS=1
+    - BASE_OUTDIR=$TRAVIS_BUILD_DIR/out
+    - WINEDEBUG=fixme-all
 
 script: make
